set up css and layout and admin page

--- a/htdocs/codehacking/public/css/libs.css
+++ b/htdocs/codehacking/public/css/libs.css
@@ -8687,4 +8687,4 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13;
 }
-//# sourceMappingURL=libs.js.map
+/*# sourceMappingURL=libs.css.map */
